[tool.poetry]
name = "ml-sandbox-template"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_sandbox_template"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
transformers = "^4.35.2"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
wandb = "^0.16.0"
black = "^23.11.0"
mypy = "^1.7.1"
jupyter = "^1.0.0"
isort = "^5.12.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
